[project]
name = "dagpy"
version = "0.1.0"
description = ""
authors = [
    {name = "Elbert Timothy",email = "elbert.timothy@touchstoneadvisory.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dagpy", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
